more python stuff

--- a/config/gef_settings.ini
+++ b/config/gef_settings.ini
@@ -14,9 +14,9 @@ dt = 5.
 t_end = 600
 
 # Time integration scheme
-# Possible values : 'epi2' : 2n order exponential propagation iterative
-#                   'epi3' : 3rd order exponential propagation iterative (Recommended)
-time_integrator = 'epi3'
+# Possible values : epi2 : 2n order exponential propagation iterative
+#                   epi3 : 3rd order exponential propagation iterative (Recommended)
+time_integrator = epi3
 
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
