bring a couple of functions from the bubble

--- a/config/gef_settings.ini
+++ b/config/gef_settings.ini
@@ -1,8 +1,13 @@
 [Test_case]
 
 # Possible values
-#   1 : constant
-#   2 : gaussian
+#  -1 : multiscale signal (passive advection only)
+#   0 : deformation flow  (passive advection only)
+#   1 : cosine hill (passive advection only)
+#   2 : zonal flow (shallow water)
+#   5 : zonal flow over an isolated mountain (shallow water)
+#   6 : Rossby-Haurvitz waves (shallow water)
+#   8 : Unstable jet (shallow water)
 case_number = 1
 
 [Time_integration]
@@ -14,9 +19,9 @@ dt = 5.
 t_end = 600
 
 # Time integration scheme
-# Possible values : 'epi2' : 2n order exponential propagation iterative
-#                   'epi3' : 3rd order exponential propagation iterative (Recommended)
-time_integrator = 'epi3'
+# Possible values  = epi2 = 2n order exponential propagation iterative
+#                    epi3 = 3rd order exponential propagation iterative (Recommended)
+time_integrator = epi3
 
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
@@ -25,13 +30,14 @@ krylov_size = 10
 # Solver tolerance
 tolerance = 1e-7
 
+
 [Spatial_discretization]
 
 # scaling of the diffusion coefficient
 α = 0.5
 
 # Degree of the reconstruction polynomial. The grid will have (degree+1)x(degree+1) nodal points in each elements.
-degree = 4
+degree = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
