--- a/config/vortex.ini
+++ b/config/vortex.ini
@@ -8,17 +8,10 @@
 #   5 : zonal flow over an isolated mountain (shallow water)
 #   6 : Rossby-Haurvitz waves (shallow water)
 #   8 : Unstable jet (shallow water)
-case_number = 1
+case_number = 0
 
 # Angle between the sphere axis and the axis of rotation. Only for cases -1, 1 and 2.
-#Williamson_angle = 2.356194490192345
-#Williamson_angle = -2.356194490192345
-#Williamson_angle = -1.5707963267948966
-#Williamson_angle = 1.5707963267948966
-#Williamson_angle = -0.7853981633974483
-Williamson_angle = 0.7853981633974483
-#Williamson_angle = 0
-#Williamson_angle = 3.141592653589793
+Williamson_angle = 0
 
 [Time_integration]
 
@@ -26,7 +19,7 @@ Williamson_angle = 0.7853981633974483
 dt = 3600
 
 # End time of the simulation in sec
-t_end = 1036800
+t_end = 5184000
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
@@ -47,7 +40,7 @@ tolerance = 1e-7
 α = 0.5
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 5
+nbsolpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
@@ -59,4 +52,4 @@ nb_elements = 12
 stat_freq = 1
 
 # Plot solution every "plot_freq" steps, 0 to disable.
-plot_freq = 72
+plot_freq = 240
