--- a/config/vortex.ini
+++ b/config/vortex.ini
@@ -53,3 +53,6 @@ stat_freq = 1
 
 # Plot solution every "plot_freq" steps, 0 to disable.
 plot_freq = 1
+
+# When an analytic solution is available, plot the error after the last time step
+plot_error = False
