--- a/config/case2.ini
+++ b/config/case2.ini
@@ -60,3 +60,6 @@ stat_freq = 1
 
 # Plot solution every "plot_freq" steps, 0 to disable.
 plot_freq = 1
+
+# When an analytic solution is available, plot the error after the last time step
+plot_error = True
