Analytical solution for Matsuno

--- a/config/matsuno.ini
+++ b/config/matsuno.ini
@@ -8,6 +8,9 @@
 #   5 : zonal flow over an isolated mountain (shallow water)
 #   6 : Rossby-Haurvitz waves (shallow water)
 #   8 : Unstable jet (shallow water)
+#   9 : matsuno (Rossby waves)
+#  10 : matsuno (WIG waves)
+#  11 : matsuno (EIG waves)
 case_number = 9
 
 # Angle between the sphere axis and the axis of rotation. Only for cases -1, 1 and 2.
@@ -62,4 +65,4 @@ stat_freq = 0
 plot_freq = 444
 
 # When an analytic solution is available, plot the error after the last time step
-plot_error = False
+plot_error = True
