specific options for the Matsuno test case

--- a/config/matsuno.ini
+++ b/config/matsuno.ini
@@ -8,10 +8,11 @@
 #   5 : zonal flow over an isolated mountain (shallow water)
 #   6 : Rossby-Haurvitz waves (shallow water)
 #   8 : Unstable jet (shallow water)
-#   9 : matsuno (Rossby waves)
-#  10 : matsuno (WIG waves)
-#  11 : matsuno (EIG waves)
+#   9 : matsuno
 case_number = 9
+
+# choose Rossby, WIG or EIG waves.
+matsuno_wave_type = Rossby
 
 [Time_integration]
 
