--- a/config/case2.ini
+++ b/config/case2.ini
@@ -44,7 +44,7 @@ tolerance = 1e-7
 [Spatial_discretization]
 
 # scaling of the diffusion coefficient
-α = 0.5
+? = 0.5
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
 nbsolpts = 5
@@ -53,13 +53,13 @@ nbsolpts = 5
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
 nb_elements = 15
 
-[Plot_options]
+[Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
-stat_freq = 1
+stat_freq = 0
 
-# Plot solution every "plot_freq" steps, 0 to disable.
-plot_freq = 1
+# Output solution every "plot_freq" steps, 0 to disable.
+output_freq = 1
 
-# When an analytic solution is available, plot the error after the last time step
-plot_error = True
+# Output filename
+output_file = /tmp/out.nc
