--- a/config/galewsky.ini
+++ b/config/galewsky.ini
@@ -41,15 +41,15 @@ nbsolpts = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements = 10
+nb_elements = 15
 
-[Plot_options]
+[Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 0
 
-# Plot solution every "plot_freq" steps, 0 to disable.
-plot_freq = 144
+# Output solution every "plot_freq" steps, 0 to disable.
+output_freq = 1
 
-# When an analytic solution is available, plot the error after the last time step
-plot_error = False
+# Output filename
+output_file = /tmp/out.nc
