--- a/config/case5.ini
+++ b/config/case5.ini
@@ -37,19 +37,19 @@ tolerance = 1e-7
 α = 0.5
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 5
+nbsolpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements = 16
+nb_elements = 10
 
-[Plot_options]
+[Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 0
 
-# Plot solution every "plot_freq" steps, 0 to disable.
-plot_freq = 360
+# Output solution every "plot_freq" steps, 0 to disable.
+output_freq = 1
 
-# When an analytic solution is available, plot the error after the last time step
-plot_error = False
+# Output filename
+output_file = /tmp/out.nc
