--- a/config/case6.ini
+++ b/config/case6.ini
@@ -23,7 +23,7 @@ t_end = 1209600
 #                    epi2 : 2n order exponential propagation iterative
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
-time_integrator = epi3
+time_integrator = epi2/ark
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
