--- a/config/case2.ini
+++ b/config/case2.ini
@@ -1,3 +1,9 @@
+[Grid]
+λ0 = 0.0
+#ϕ0 = 0.0
+ϕ0 = 0.7853981633974483
+α0 = 0.0
+
 [Test_case]
 
 # Possible values
@@ -9,16 +15,6 @@
 #   6 : Rossby-Haurvitz waves (shallow water)
 #   8 : Unstable jet (shallow water)
 case_number = 2
-
-# Angle between the sphere axis and the axis of rotation. Only for cases -1, 1 and 2.
-#Williamson_angle = 2.356194490192345
-#Williamson_angle = -2.356194490192345
-#Williamson_angle = -1.5707963267948966
-#Williamson_angle = 1.5707963267948966
-#Williamson_angle = -0.7853981633974483
-#Williamson_angle = 0.7853981633974483
-Williamson_angle = 0
-#Williamson_angle = 3.141592653589793
 
 [Time_integration]
 
