add matsuno amplitude to config

--- a/config/matsuno.ini
+++ b/config/matsuno.ini
@@ -19,6 +19,8 @@ case_number = 9
 
 # choose Rossby, WIG or EIG waves.
 matsuno_wave_type = Rossby
+# Wave amplitude
+matsuno_amp = 1e-5
 
 [Time_integration]
 
