--- a/config/case6.ini
+++ b/config/case6.ini
@@ -29,7 +29,7 @@ t_end = 1209600
 #                    epi2 : 2n order exponential propagation iterative
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
-time_integrator = epi2/ark
+time_integrator = epi3
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
@@ -38,9 +38,6 @@ krylov_size = 10
 tolerance = 1e-7
 
 [Spatial_discretization]
-
-# scaling of the diffusion coefficient
-α = 0.5
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
 nbsolpts = 3
