stats for case 2

--- a/config/case2.ini
+++ b/config/case2.ini
@@ -22,7 +22,7 @@ case_number = 2
 dt = 1800
 
 # End time of the simulation in sec
-t_end = 1036800
+t_end = 432000
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
@@ -49,7 +49,7 @@ nb_elements = 10
 [Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
-stat_freq = 0
+stat_freq = 1
 
 # Output solution every "plot_freq" steps, 0 to disable.
 output_freq = 1
