--- a/test_case.ini
+++ b/test_case.ini
@@ -22,7 +22,7 @@ case_number = 6
 dt = 1800
 
 # End time of the simulation in sec
-t_end = 9000
+t_end = 5400
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
@@ -40,11 +40,14 @@ tolerance = 1e-5
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts=3
+nbsolpts=6
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
 nb_elements = 30
+
+filter_apply = 0
+filter_order = 8
 
 [Output_options]
 
