Simplified test script. Better test case parameters

--- a/ark_test/test_case.ini
+++ b/ark_test/test_case.ini
@@ -35,19 +35,19 @@ time_integrator = epi2/ark
 krylov_size = 10
 
 # Solver tolerance
-tolerance=1e-5
+tolerance=1e-7
 
-ark_solver_exp=ESDIRK5(4)7L[2]SA
-ark_solver_imp=ESDIRK5(4)7L[2]SA
+ark_solver_exp=ARK5(4)8L[2]SAb-ERK
+ark_solver_imp=ARK5(4)8L[2]SAb-ESDIRK
 
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts=5
+nbsolpts=4
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements=25
+nb_elements=10
 
 [Output_options]
 
