--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,14 @@ model_output/
 .idea
 venv
 
-rat2out.txt
+*out.txt
+diff*.dat
+geom*.dat
 
 *.png
 *.out
+
+precondition_test/**/*.npy
+precondition_test/**/*.npz
+precondition_test/**/*.pdf
 
