--- a/ark_test/test_case.ini
+++ b/ark_test/test_case.ini
@@ -22,7 +22,7 @@ case_number = 6
 dt=1800
 
 # End time of the simulation in sec
-t_end=9000
+t_end=7200
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
@@ -37,17 +37,17 @@ krylov_size = 10
 # Solver tolerance
 tolerance=1e-7
 
-ark_solver_exp=ARK5(4)8L[2]SAb-ERK
-ark_solver_imp=ARK5(4)8L[2]SAb-ESDIRK
+ark_solver_exp=ARK3(2)4L[2]SA-ERK
+ark_solver_imp=ARK3(2)4L[2]SA-ESDIRK
 
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts=4
+nbsolpts=5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements=10
+nb_elements=30
 
 [Output_options]
 
