--- a/config/18x6/case2.ini
+++ b/config/18x6/case2.ini
@@ -44,7 +44,7 @@ nbsolpts = 6
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements = 18
+nb_elements_horizontal = 18
 
 [Output_options]
 
