--- a/config/matsuno.ini
+++ b/config/matsuno.ini
@@ -53,7 +53,7 @@ nbsolpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements = 10
+nb_elements_horizontal = 10
 
 [Output_options]
 
