--- a/config/case6.ini
+++ b/config/case6.ini
@@ -22,14 +22,18 @@ case_number = 6
 dt = 1800
 
 # End time of the simulation in sec
-t_end = 1209600
+t_end = 9000
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
 #                    epi2 : 2n order exponential propagation iterative
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
-time_integrator = epi3
+time_integrator = rat2
+use_preconditioner = 1
+;precond_filter_before = 1
+;precond_filter_during = 1
+;precond_filter_after = 1
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
@@ -40,11 +44,11 @@ tolerance = 1e-7
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 3
+nbsolpts = 4
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 10
+nb_elements_horizontal = 6
 
 [Output_options]
 
