Yet another attempt for 3D ...

--- a/config/dcmip11.ini
+++ b/config/dcmip11.ini
@@ -7,11 +7,11 @@ equations = Euler
 ϕ0 = 0.7853981633974483
 α0 = 0.0
 
-ztop = 10000.0
+ztop = 12000.0
 
 [Test_case]
 
-case_number = 31
+case_number = 11
 
 [Time_integration]
 
@@ -19,7 +19,8 @@ case_number = 31
 dt = 1800
 
 # End time of the simulation in sec
-t_end = 1209600
+#t_end = 1036800
+t_end = 0
 
 # Time integration scheme
 time_integrator = epi2
@@ -36,8 +37,8 @@ tolerance = 1e-12
 nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 10
-nb_elements_vertical = 4
+nb_elements_horizontal = 20
+nb_elements_vertical = 20
 
 [Output_options]
 
