--- a/config/case2.ini
+++ b/config/case2.ini
@@ -4,6 +4,8 @@
 ϕ0 = 0.7853981633974483
 α0 = 0.0
 
+discretization = fv
+
 [Test_case]
 
 # Possible values
@@ -22,14 +24,14 @@ case_number = 2
 dt = 1800
 
 # End time of the simulation in sec
-t_end = 432000
+t_end = 1800
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
 #                    epi2 : 2n order exponential propagation iterative
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
-time_integrator = epi3
+time_integrator = rat2
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
@@ -40,7 +42,7 @@ tolerance = 1e-7
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 3
+nbsolpts = 1
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
@@ -52,7 +54,7 @@ nb_elements_horizontal = 10
 stat_freq = 1
 
 # Output solution every "plot_freq" steps, 0 to disable.
-output_freq = 1
+output_freq = 0
 
 # Output filename
 output_file = /tmp/out.nc
