--- a/config/case6.ini
+++ b/config/case6.ini
@@ -4,6 +4,9 @@
 ϕ0 = 0.7853981633974483
 α0 = 0.0
 
+# Possible values: dg (discontinuous Galerkin), fv (finite volumes)
+discretization = fv
+
 [Test_case]
 
 # Possible values
@@ -22,7 +25,7 @@ case_number = 6
 dt = 1800
 
 # End time of the simulation in sec
-t_end = 9000
+t_end = 1800
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
@@ -30,7 +33,7 @@ t_end = 9000
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = rat2
-use_preconditioner = 1
+;use_preconditioner = 1
 ;precond_filter_before = 1
 ;precond_filter_during = 1
 ;precond_filter_after = 1
@@ -44,11 +47,11 @@ tolerance = 1e-7
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 4
+nbsolpts = 1
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 6
+nb_elements_horizontal = 10
 
 [Output_options]
 
