First draft for 3D advection

--- a/config/dcmip11.ini
+++ b/config/dcmip11.ini
@@ -16,20 +16,28 @@ case_number = 11
 [Time_integration]
 
 # Time step
+#dt = 60
+#dt = 900
 dt = 1800
+#dt = 3600
 
 # End time of the simulation in sec
 #t_end = 1036800
-t_end = 0
+#t_end = 18000
+t_end = 1800
+#t_end = 3600
+#t_end = 72000
+#t_end = 0
 
 # Time integration scheme
 time_integrator = epi2
+#time_integrator = tvdrk3
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
 
 # Solver tolerance
-tolerance = 1e-12
+tolerance = 1e-7
 
 [Spatial_discretization]
 
