--- a/config/case6.ini
+++ b/config/case6.ini
@@ -5,7 +5,7 @@
 α0 = 0.0
 
 # Possible values: dg (discontinuous Galerkin), fv (finite volumes)
-discretization = fv
+discretization = dg
 
 [Test_case]
 
@@ -33,7 +33,7 @@ t_end = 1800
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = rat2
-;use_preconditioner = 1
+use_preconditioner = 1
 ;precond_filter_before = 1
 ;precond_filter_during = 1
 ;precond_filter_after = 1
@@ -47,7 +47,7 @@ tolerance = 1e-7
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 1
+nbsolpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
