--- a/mg_tests/test.ini
+++ b/mg_tests/test.ini
@@ -41,9 +41,7 @@ precond_tolerance = 1e-1
 max_mg_level = 1
 mg_smoothe_only = 1
 mg_dt = 200
-num_pre_smoothing = 3
-num_post_smoothing = 3
-mg_cfl = 0.8
+linear_solver = fgmres
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
