Accidentally removed (important) parameters

--- a/mg_tests/test.ini
+++ b/mg_tests/test.ini
@@ -41,6 +41,9 @@ precond_tolerance = 1e-1
 max_mg_level = 1
 mg_smoothe_only = 1
 mg_dt = 200
+num_pre_smoothing = 4
+num_post_smoothing = 4
+mg_cfl = 0.9
 linear_solver = fgmres
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
