--- a/mg_tests/test.ini
+++ b/mg_tests/test.ini
@@ -25,10 +25,10 @@ case_number = 6
 [Time_integration]
 
 # Time step
-dt = 1800
+dt = 684
 
 # End time of the simulation in sec
-t_end = 1800
+t_end = 684
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
@@ -37,13 +37,13 @@ t_end = 1800
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = rat2
 use_preconditioner = 2
-precond_tolerance = 1e-1
-max_mg_level = 1
+precond_tolerance = 1e-7
+max_mg_level = 3
 mg_smoothe_only = 1
-mg_dt = 200
-num_pre_smoothing = 4
-num_post_smoothing = 4
-mg_cfl = 0.9
+num_pre_smoothing = 3
+num_post_smoothing = 3
+mg_cfl = 3.0
+dg_to_fv_interp = lagrange
 linear_solver = fgmres
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
@@ -55,7 +55,7 @@ tolerance = 1e-7
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 2
+nbsolpts = 8
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
@@ -67,7 +67,7 @@ nb_elements_horizontal = 30
 stat_freq = 0
 
 # Output solution every "plot_freq" steps, 0 to disable.
-output_freq = 1
+output_freq = 0
 
 # Output filename
 output_file = /tmp/out.nc
