--- a/config/dcmip11.ini
+++ b/config/dcmip11.ini
@@ -17,19 +17,19 @@ case_number = 11
 
 # Time step
 #dt = 60
-dt = 450
+#dt = 450
 #dt = 900
 #dt = 1800
-#dt = 3600
+dt = 3600
 
 # End time of the simulation in sec
 #t_end = 18000
-#t_end = 1800
-#t_end = 3600
-t_end = 4500
+#t_end = 10800
+#t_end = 36000
+#t_end = 4500
 #t_end = 43200
 
-#t_end = 1036800
+t_end = 1036800
 
 # Time integration scheme
 time_integrator = epi2
@@ -47,8 +47,8 @@ tolerance = 1e-7
 nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 30
-nb_elements_vertical = 20
+nb_elements_horizontal = 12
+nb_elements_vertical = 10
 
 [Output_options]
 
