--- a/mg_tests/test_sw.ini
+++ b/mg_tests/test_sw.ini
@@ -25,10 +25,10 @@ case_number = 6
 [Time_integration]
 
 # Time step
-dt = 684
+dt = 3600
 
 # End time of the simulation in sec
-t_end = 684
+t_end = 3600
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
@@ -36,12 +36,12 @@ t_end = 684
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = rat2
-use_preconditioner = 2
-precond_tolerance = 1e-7
-max_mg_level = 3
+preconditioner = fv-mg
+precond_tolerance = 1e-1
+coarsest_mg_order = 1
 mg_smoothe_only = 1
-num_pre_smoothing = 3
-num_post_smoothing = 3
+num_pre_smoothing = 1
+num_post_smoothing = 1
 mg_cfl = 3.0
 dg_to_fv_interp = lagrange
 linear_solver = fgmres
@@ -55,11 +55,11 @@ tolerance = 1e-7
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 8
+nbsolpts = 4
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 30
+nb_elements_horizontal = 10
 
 [Output_options]
 
