--- a/mg_tests/test_euler.ini
+++ b/mg_tests/test_euler.ini
@@ -16,14 +16,22 @@ case_number = 11
 [Time_integration]
 
 # Time step
-dt = 3600
+dt = 500000
 # End time of the simulation in sec
-t_end = 3600
+t_end = 500000
 # Time integration scheme
 time_integrator = rat2
 #time_integrator = tvdrk3
 
 preconditioner = fv
+precond_tolerance = 1e-3
+coarsest_mg_order = 1
+mg_smoothe_only = 1
+num_pre_smoothing = 1
+num_post_smoothing = 1
+mg_cfl = 1.9
+dg_to_fv_interp = lagrange
+linear_solver = fgmres
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
@@ -37,8 +45,8 @@ tolerance = 1e-7
 nbsolpts = 2
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 15
-nb_elements_vertical = 10
+nb_elements_horizontal = 8
+nb_elements_vertical = 8
 
 [Output_options]
 
