--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -3,8 +3,8 @@ equations = Euler
 
 [Grid]
 λ0 = 0.0
-#ϕ0 = 0.0
-ϕ0 = 0.7853981633974483
+ϕ0 = 0.0
+#ϕ0 = 0.7853981633974483
 α0 = 0.0
 
 ztop = 10000.0
@@ -13,13 +13,18 @@ ztop = 10000.0
 
 case_number = 31
 
+planet_scaling_factor = 125
+
 [Time_integration]
 
 # Time step
-dt = 1800
+dt = 30
 
 # End time of the simulation in sec
-t_end = 1209600
+#t_end = 0
+t_end = 3600
+#t_end = 36000
+#t_end = 450000
 
 # Time integration scheme
 time_integrator = epi2
@@ -28,7 +33,7 @@ time_integrator = epi2
 krylov_size = 10
 
 # Solver tolerance
-tolerance = 1e-12
+tolerance = 1e-7
 
 [Spatial_discretization]
 
@@ -36,8 +41,11 @@ tolerance = 1e-12
 nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 10
-nb_elements_vertical = 4
+nb_elements_horizontal = 24
+nb_elements_vertical = 3
+
+#filter_apply = 1
+#filter_order  = 2
 
 [Output_options]
 
