SGS preconditioner WIP

--- a/mg_tests/test_euler.ini
+++ b/mg_tests/test_euler.ini
@@ -7,29 +7,33 @@ equations = Euler
 #ϕ0 = 0.7853981633974483
 α0 = 0.0
 
-ztop = 12000.0
+ztop = 10000.0
 
 [Test_case]
 
-case_number = 11
+case_number = 31
+
+planet_scaling_factor = 125
 
 [Time_integration]
 
 # Time step
-dt = 500000
+dt = 10
 # End time of the simulation in sec
-t_end = 500000
+t_end = 10
 # Time integration scheme
 time_integrator = rat2
 #time_integrator = tvdrk3
 
-preconditioner = fv
-precond_tolerance = 1e-3
-coarsest_mg_order = 1
+preconditioner = fv-mg
+precond_tolerance = 1e-1
+coarsest_mg_order = 2
+mg_smoother = irk
 mg_smoothe_only = 1
 num_pre_smoothing = 1
-num_post_smoothing = 1
-mg_cfl = 1.9
+num_post_smoothing = 0
+mg_cfl = 100.0045
+sgs_eta = 0.1
 dg_to_fv_interp = lagrange
 linear_solver = fgmres
 
