--- a/config/case6.ini
+++ b/config/case6.ini
@@ -33,7 +33,7 @@ t_end = 1209600
 #                    epi2 : 2n order exponential propagation iterative
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
-time_integrator = rk23
+time_integrator = epi3
 
 # Solver tolerance
 tolerance = 1e-7
