Fixed the preconditioners

--- a/mg_tests/test_euler.ini
+++ b/mg_tests/test_euler.ini
@@ -25,23 +25,25 @@ t_end = 10
 time_integrator = rat2
 #time_integrator = tvdrk3
 
-preconditioner = fv-mg
-precond_tolerance = 1e-1
-coarsest_mg_order = 2
-mg_smoother = irk
-mg_smoothe_only = 1
-num_pre_smoothing = 1
-num_post_smoothing = 0
-mg_cfl = 100.0045
-sgs_eta = 0.1
-dg_to_fv_interp = lagrange
-linear_solver = fgmres
-
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
 
 # Solver tolerance
 tolerance = 1e-7
+
+[Preconditioning]
+
+preconditioner = none
+precond_tolerance = 1e-1
+coarsest_mg_order = 1
+mg_smoother = erk
+mg_smoothe_only = 1
+num_pre_smoothe = 1
+num_post_smoothe = 1
+pseudo_cfl = 0.00156
+sgs_eta = 0.1
+dg_to_fv_interp = lagrange
+linear_solver = fgmres
 
 [Spatial_discretization]
 
@@ -61,4 +63,4 @@ stat_freq = 0
 output_freq = 1
 
 # Output filename
-output_file = /tmp/out.nc
+output_file = /home/vma000/tmp/out.nc
