--- a/mg_tests/test_sw.ini
+++ b/mg_tests/test_sw.ini
@@ -25,10 +25,10 @@ case_number = 6
 [Time_integration]
 
 # Time step
-dt = 300000
+dt = 1000
 
 # End time of the simulation in sec
-t_end = 300000
+t_end = 1000
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
@@ -36,15 +36,6 @@ t_end = 300000
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = rat2
-preconditioner = fv-mg
-precond_tolerance = 1e-1
-coarsest_mg_order = 4
-mg_smoothe_only = 1
-num_pre_smoothing = 1
-num_post_smoothing = 1
-mg_cfl = 3.0
-dg_to_fv_interp = lagrange
-linear_solver = fgmres
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
@@ -52,14 +43,26 @@ krylov_size = 10
 # Solver tolerance
 tolerance = 1e-7
 
+[Preconditioning]
+
+preconditioner = none
+precond_tolerance = 1e-1
+coarsest_mg_order = 1
+mg_smoothe_only = 1
+num_pre_smoothing = 1
+num_post_smoothing = 1
+mg_cfl = 3.0
+dg_to_fv_interp = lagrange
+linear_solver = fgmres
+
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 4
+nbsolpts = 2
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 4
+nb_elements_horizontal = 8
 
 [Output_options]
 
