Reorganized MG preconditioner - Fixed FV matvec operation (was doing an extra RHS call every time) - Removed RK smoother, and any use of (pseudo-)CFL

--- a/mg_tests/test_euler.ini
+++ b/mg_tests/test_euler.ini
@@ -35,15 +35,14 @@ tolerance = 1e-5
 
 preconditioner = none
 precond_tolerance = 1e-1
-coarsest_mg_order = 1
-mg_smoother = erk
+num_mg_levels = 1
+mg_smoother = kiops
 mg_smoothe_only = 1
 num_pre_smoothe = 1
 num_post_smoothe = 1
-pseudo_cfl = 0.00156
-sgs_eta = 0.1
 dg_to_fv_interp = lagrange
 linear_solver = fgmres
+kiops_dt_factor = 0.9
 
 [Spatial_discretization]
 
