--- a/mg_tests/test_sw.ini
+++ b/mg_tests/test_sw.ini
@@ -20,7 +20,7 @@ discretization = dg
 #   5 : zonal flow over an isolated mountain (shallow water)
 #   6 : Rossby-Haurvitz waves (shallow water)
 #   8 : Unstable jet (shallow water)
-case_number = 6
+case_number = 5
 
 [Time_integration]
 
@@ -47,13 +47,14 @@ tolerance = 1e-7
 
 preconditioner = none
 precond_tolerance = 1e-1
-coarsest_mg_order = 1
+num_mg_levels = 1
+mg_smoother = kiops
 mg_smoothe_only = 1
-num_pre_smoothing = 1
-num_post_smoothing = 1
-mg_cfl = 3.0
+num_pre_smoothe = 1
+num_post_smoothe = 1
 dg_to_fv_interp = lagrange
 linear_solver = fgmres
+kiops_dt_factor = 0.9
 
 [Spatial_discretization]
 
