Added preconditioner param to case 5 config

--- a/config/case5.ini
+++ b/config/case5.ini
@@ -41,10 +41,14 @@ tolerance = 1e-7
 [Preconditioning]
 
 preconditioner = none
+precond_tolerance = 1e-1
 mg_smoother = kiops
 num_pre_smoothe = 1
 num_post_smoothe = 1
+num_mg_levels = 1
 mg_cfl = 0.00001
+mg_smoothe_only = 0
+kiops_dt_factor = 0.9
 
 [Spatial_discretization]
 
