--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *~
 *.swp
 *.swo
+*.code-workspace
 
 doc/*.pdf
 doc/*.aux
@@ -27,8 +28,12 @@ geom*.dat
 *.png
 *.out
 *.nc
+*.db
 
-precondition_test/**/*.npy
-precondition_test/**/*.npz
-precondition_test/**/*.pdf
+mg_tests/configs*
+mg_tests/*.txt
+mg_tests/*.pdf
+mg_tests/**/*.ini
+!mg_tests/test_euler.ini
+!mg_tests/test_sw.ini
 
