--- a/config/dcmip20.ini
+++ b/config/dcmip20.ini
@@ -20,7 +20,8 @@ dt = 360
 
 # End time of the simulation in sec
 t_end = 3600
-#t_end = 36000
+# 6 days, per DCMIP spec
+#t_end = 518400 
 
 # Time integration scheme
 time_integrator = epi2
@@ -34,8 +35,12 @@ tolerance = 1e-7
 nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 30
-nb_elements_vertical = 5
+# 1 degree horizontal spacing: 32*4*3 = 360 (DCMIP spec)
+nb_elements_horizontal = 30 
+# 15 vertical levels (DCMIP spec, version 1)
+nb_elements_vertical = 5 
+# 30 vertical levels (DCMIP spec, version 2)
+#nb_elements_vertical = 10 
 
 #filter_apply = 1
 #filter_order  = 2
@@ -46,6 +51,7 @@ nb_elements_vertical = 5
 stat_freq = 0
 
 # Output solution every "plot_freq" steps, 0 to disable.
+# DCMIP spec: output every 6 hours
 output_freq = 1
 
 # Output filename
