--- a/config/case6.ini
+++ b/config/case6.ini
@@ -26,14 +26,15 @@ case_number = 6
 dt = 1800
 
 # End time of the simulation in sec
-t_end = 1209600
+; t_end = 1209600
+t_end = 1800
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
 #                    epi2 : 2n order exponential propagation iterative
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
-time_integrator = epi3
+time_integrator = ros2
 
 # Solver tolerance
 tolerance = 1e-7
@@ -45,7 +46,7 @@ nbsolpts = 3
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 10
+nb_elements_horizontal = 30
 
 [Output_options]
 
@@ -53,7 +54,7 @@ nb_elements_horizontal = 10
 stat_freq = 0
 
 # Output solution every "plot_freq" steps, 0 to disable.
-output_freq = 1
+output_freq = 0
 
 # Output filename
 output_file = /tmp/out.nc
