Integrated bubble code/cases into GEF - Introduced "grid type" (cubed sphere or cartesian) - Renamed cubed_sphere class to CubedSphere - Updated configs - Ported some functionality: saving state, starting from non-zero step - Matplotlib is now required

--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -2,6 +2,7 @@
 equations = Euler
 
 [Grid]
+type = cubed_sphere
 λ0 = 0.0
 ϕ0 = 0.0
 #ϕ0 = 0.7853981633974483
@@ -49,7 +50,7 @@ nb_elements_vertical = 3
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 0
 
-# Output solution every "plot_freq" steps, 0 to disable.
+# Output solution every "output_freq" steps, 0 to disable.
 output_freq = 1
 
 # Output filename
