--- a/config/case6.ini
+++ b/config/case6.ini
@@ -3,6 +3,9 @@
 equations = shallow_water
 
 [Grid]
+
+# Possible values: cubed_sphere, cartesian2d
+type = cubed_sphere
 λ0 = 0.0
 #ϕ0 = 0.0
 ϕ0 = 0.7853981633974483
@@ -27,17 +30,19 @@ dt = 1800
 
 # End time of the simulation in sec
 ; t_end = 1209600
-t_end = 1800
+t_end = 18000
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
 #                    epi2 : 2n order exponential propagation iterative
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
-time_integrator = ros2
+time_integrator = epi2
 
 # Solver tolerance
 tolerance = 1e-7
+
+starting_step = 6
 
 [Spatial_discretization]
 
@@ -53,8 +58,11 @@ nb_elements_horizontal = 30
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 0
 
-# Output solution every "plot_freq" steps, 0 to disable.
-output_freq = 0
+# Output solution every "output_freq" steps, 0 to disable.
+output_freq = 1
 
-# Output filename
-output_file = /tmp/out.nc
+# Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
+save_state_freq = 3
+
+# Output directory
+#output_dir  = results
