--- a/config/dcmip20.ini
+++ b/config/dcmip20.ini
@@ -2,6 +2,7 @@
 equations = Euler
 
 [Grid]
+type = cubed_sphere
 λ0 = 0.0
 ϕ0 = 0.0
 #ϕ0 = 0.7853981633974483
@@ -50,7 +51,7 @@ nb_elements_vertical = 5
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 0
 
-# Output solution every "plot_freq" steps, 0 to disable.
+# Output solution every "output_freq" steps, 0 to disable.
 # DCMIP spec: output every 6 hours
 output_freq = 1
 
