--- a/config/unsteady_zonal.ini
+++ b/config/unsteady_zonal.ini
@@ -3,6 +3,7 @@
 equations = shallow_water
 
 [Grid]
+type = cubed_sphere
 λ0 = 0.0
 ϕ0 = 0.0
 #ϕ0 = 0.7853981633974483
@@ -54,7 +55,7 @@ nb_elements_horizontal = 10
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 1
 
-# Output solution every "plot_freq" steps, 0 to disable.
+# Output solution every "output_freq" steps, 0 to disable.
 output_freq = 1
 
 # Output filename
