--- a/config/vortex.ini
+++ b/config/vortex.ini
@@ -52,7 +52,7 @@ nb_elements_horizontal = 10
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 1
 
-# Output solution every "plot_freq" steps, 0 to disable.
+# Output solution every "output_freq" steps, 0 to disable.
 output_freq = 1
 
 # Output filename
