--- a/config/case6.ini
+++ b/config/case6.ini
@@ -30,28 +30,32 @@ dt = 1800
 
 # End time of the simulation in sec
 ; t_end = 1209600
-t_end = 18000
+t_end = 1800
 
 # Time integration scheme
 # Possible values  = tvdrk3 : 3th Order TVD-RK time integration
 #                    epi2 : 2n order exponential propagation iterative
 #                    epi3 : 3rd order exponential propagation iterative (Recommended)
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
-time_integrator = epi2
+time_integrator = ros2
 
 # Solver tolerance
 tolerance = 1e-7
 
-starting_step = 6
+starting_step = 0
+
+[Preconditioning]
+preconditioner = p-mg
+precond_tolerance = 1e-1
 
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 3
+nbsolpts = 4
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 30
+nb_elements_horizontal = 20
 
 [Output_options]
 
@@ -59,10 +63,12 @@ nb_elements_horizontal = 30
 stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
-output_freq = 1
+output_freq = 0
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
 save_state_freq = 3
+
+store_solver_stats = 1
 
 # Output directory
 #output_dir  = results
