Working FGMRES precond for bubble - Put initialization of state vars into a function (avoids duplication)

--- a/config/density_current.ini
+++ b/config/density_current.ini
@@ -54,7 +54,7 @@ tolerance = 1e-6
 [Preconditioning]
 preconditioner = none
 precond_tolerance = 1e-3
-coarsest_mg_level = 1
+num_mg_levels = 5
 num_pre_smoothe = 1
 num_post_smoothe = 1
 pseudo_cfl = 5.0
