--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -26,7 +26,7 @@ bubble_rad = 250.
 dt = 5
 
 # End time of the simulation in sec
-t_end = 50
+t_end = 5
 
 # Time integration scheme
 # Possible values  = 'epi2', 'epi3', 'epi4', 'epi5', 'epi6'  = multistep exponential propagation iterative
@@ -50,12 +50,12 @@ krylov_size = 10
 tolerance = 1e-6
 
 # If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
-starting_step = 8
+starting_step = 0
 
 [Preconditioning]
-preconditioner = none
-precond_tolerance = 1e-3
-coarsest_mg_level = 1
+preconditioner = p-mg
+precond_tolerance = 1e-1
+num_mg_levels = 5
 num_pre_smoothe = 1
 num_post_smoothe = 1
 pseudo_cfl = 5.0
@@ -91,3 +91,5 @@ output_freq = 1
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
 save_state_freq = 2
+
+store_solver_stats = 1
