Winter clean-up

--- a/config/case6.ini
+++ b/config/case6.ini
@@ -3,6 +3,9 @@
 equations = shallow_water
 
 [Grid]
+
+# Possible values: cubed_sphere, cartesian2d
+type = cubed_sphere
 λ0 = 0.0
 #ϕ0 = 0.0
 ϕ0 = 0.7853981633974483
@@ -52,8 +55,14 @@ nb_elements_horizontal = 10
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 0
 
-# Output solution every "plot_freq" steps, 0 to disable.
-output_freq = 1
+# Output solution every "output_freq" steps, 0 to disable.
+output_freq = 0
 
-# Output filename
-output_file = /tmp/out.nc
+# Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
+save_state_freq = 0
+
+# Store statistics about the solver (iterations, residuals, etc.). 0 to disable.
+store_solver_stats = 0
+
+# Output directory
+output_dir  = results
