Added Geometry and OutputManager classes - Updated README

--- a/config/case6.ini
+++ b/config/case6.ini
@@ -41,6 +41,11 @@ time_integrator = epi3
 # Solver tolerance
 tolerance = 1e-7
 
+starting_step = 0
+
+[Preconditioning]
+preconditioner = none
+
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
