Added script to plot solver stats - Fixed some pylint/pylance warnings - Use FV RHS function for bubble in preconditioner (when applicable)

--- a/.pylintrc
+++ b/.pylintrc
@@ -187,7 +187,7 @@ good-names=i,
 
 # Good variable names regexes, separated by a comma. If names match any regex,
 # they will always be accepted
-good-names-rgxs=
+good-names-rgxs=[a-zA-Z]_[0-9], [a-zA-Z][0-9], [a-zA-Z]
 
 # Include a hint for the correct naming format with invalid-name.
 include-naming-hint=no
