--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -41,7 +41,7 @@ t_end = 1080
 #                    'partrosexp2' = Implicit-Exponential hybrid scheme (implicit first)
 #                    'crank_nicolson' = 2nd order implicit scheme
 #                    'bdf2' = 2nd order implicit multistep
-time_integrator = epi2
+time_integrator = ros2
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
