Trying to make 3D preconditioner work

--- a/config/case6.ini
+++ b/config/case6.ini
@@ -45,6 +45,18 @@ starting_step = 0
 
 [Preconditioning]
 preconditioner = none
+precond_tolerance = 1e-1
+num_mg_levels = 3
+num_pre_smoothe = 1
+num_post_smoothe = 1
+pseudo_cfl = 2.5e7
+restrict_method = modal
+kiops_dt_factor = 1.2
+mg_solve_coarsest = 0
+mg_smoother = erk1
+precond_filter_apply = 0
+verbose_precond = 1
+; exp_smoothe_spectral_radii = [3.0, 1.0, 0.5, 2.2, 1.0]
 
 [Spatial_discretization]
 
