--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -33,6 +33,22 @@ time_integrator = epi2
 # Solver tolerance
 tolerance = 1e-7
 
+[Preconditioning]
+
+preconditioner = fv-mg
+precond_tolerance = 1e-1
+num_mg_levels = 2
+num_pre_smoothe = 1
+num_post_smoothe = 1
+pseudo_cfl = 0.1
+restrict_method = modal
+kiops_dt_factor = 1.2
+mg_solve_coarsest = 0
+mg_smoother = exp
+precond_filter_apply = 0
+verbose_precond = 0
+; exp_smoothe_spectral_radii = [3.0, 1.0, 0.5, 2.2, 1.0]
+
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
@@ -50,8 +66,11 @@ nb_elements_vertical = 3
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 0
 
-# Output solution every "output_freq" steps, 0 to disable.
-output_freq = 1
+# Plot solution every "output_freq" steps, 0 to disable.
+output_freq = 0
 
-# Output filename
-output_file = /tmp/out.nc
+# Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
+save_state_freq = 0
+
+# Store statistics about the solver (iterations, residuals, etc.). 0 to disable.
+store_solver_stats = 0
