Reworked code for reading configuration

--- a/config/case6.ini
+++ b/config/case6.ini
@@ -5,7 +5,7 @@ equations = shallow_water
 [Grid]
 
 # Possible values: cubed_sphere, cartesian2d
-type = cubed_sphere
+grid_type = cubed_sphere
 λ0 = 0.0
 #ϕ0 = 0.0
 ϕ0 = 0.7853981633974483
