--- a/config/dcmip11.ini
+++ b/config/dcmip11.ini
@@ -2,7 +2,7 @@
 equations = Euler
 
 [Grid]
-type = cubed_sphere
+grid_type = cubed_sphere
 λ0 = 0.0
 ϕ0 = 0.0
 #ϕ0 = 0.7853981633974483
@@ -57,4 +57,4 @@ stat_freq = 0
 output_freq = 1
 
 # Output filename
-output_file = /tmp/out.nc
+base_output_file = out
