--- a/config/dcmip21.ini
+++ b/config/dcmip21.ini
@@ -5,7 +5,7 @@
 equations = Euler
 
 [Grid]
-type = cubed_sphere
+grid_type = cubed_sphere
 λ0 = 0.0
 ϕ0 = 0.0
 #ϕ0 = 0.7853981633974483
@@ -58,4 +58,4 @@ stat_freq = 0
 output_freq = 500
 
 # Output filename
-output_file = ./dcmip_21.nc
+base_output_file = dcmip_21
