Various improvements: - Keep track of simulation time in integrator - Easier solver stats output for different integrators - gmres_restart as a config option - More solver stats logged

--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -33,18 +33,21 @@ time_integrator = epi2
 # Solver tolerance
 tolerance = 1e-7
 
+verbose_solver = 1
+gmres_restart = 200
+
 [Preconditioning]
 
 preconditioner = fv-mg
 precond_tolerance = 1e-1
-num_mg_levels = 2
+num_mg_levels = 3
 num_pre_smoothe = 1
 num_post_smoothe = 1
-pseudo_cfl = 0.1
+pseudo_cfl = 9e4
 restrict_method = modal
 kiops_dt_factor = 1.2
-mg_solve_coarsest = 0
-mg_smoother = exp
+mg_solve_coarsest = 1
+mg_smoother = erk3
 precond_filter_apply = 0
 verbose_precond = 0
 ; exp_smoothe_spectral_radii = [3.0, 1.0, 0.5, 2.2, 1.0]
