--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -54,6 +54,9 @@ jacobian_method = FD
 # If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
 starting_step = 0
 
+verbose_solver = 1
+gmres_restart = 30
+
 [Preconditioning]
 preconditioner = none
 precond_tolerance = 1e-1
