--- a/config/dcmip21.ini
+++ b/config/dcmip21.ini
@@ -20,7 +20,7 @@ case_number = 21
 [Time_integration]
 
 # Time step
-dt = 0.2
+dt = 25
 
 # End time of the simulation in sec
 # per DCMIP spec, equivalent to 1000 hours in scaled units
@@ -28,8 +28,8 @@ t_end = 7200
 # t_end = 30
 
 # Time integration scheme
-# time_integrator = epi2
-time_integrator = tvdrk3
+time_integrator = epi2
+#time_integrator = tvdrk3
 
 # Solver tolerance
 tolerance = 1e-7
@@ -37,16 +37,24 @@ tolerance = 1e-7
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 3
+nbsolpts = 5
 
 # Number of element in x^1, x^2 and x^3 directions
 # 1.5 degree horizontal spacing: 20*3*4 = 120
-nb_elements_horizontal = 20 
+nb_elements_horizontal = 12
 # 60 vertical levels, ≈ 300m spacing
-nb_elements_vertical = 20 
+nb_elements_vertical = 12 
 
 #filter_apply = 1
 #filter_order  = 2
+
+# Parameters for the exponential filter, applied after
+# each timestep (if expfilter_appy=1)
+expfilter_apply = 1
+expfilter_order = 4
+expfilter_cutoff = 0.50
+expfilter_strength = 1e-2
+
 
 [Output_options]
 
@@ -55,7 +63,7 @@ stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
 # DCMIP spec: output every 100 seconds
-output_freq = 500
+output_freq = 4
 
 # Output filename
 base_output_file = dcmip_21
