Increase expfilter strength in DCMIP21/EPI2 case

--- a/config/dcmip21.ini
+++ b/config/dcmip21.ini
@@ -25,6 +25,7 @@ dt = 25
 # End time of the simulation in sec
 # per DCMIP spec, equivalent to 1000 hours in scaled units
 t_end = 7200 
+#t_end = 800
 # t_end = 30
 
 # Time integration scheme
@@ -53,7 +54,7 @@ nb_elements_vertical = 12
 expfilter_apply = 1
 expfilter_order = 4
 expfilter_cutoff = 0.50
-expfilter_strength = 1e-2
+expfilter_strength = 1e-1
 
 
 [Output_options]
@@ -63,7 +64,7 @@ stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
 # DCMIP spec: output every 100 seconds
-output_freq = 4
+output_freq = 1
 
 # Output filename
 base_output_file = dcmip_21
