Test infrastructure improvements: - Reworked plotting tool - Reworked stats output code. Can add new columns to existing results - Specify stats file as an option - Fixed bubble FV RHS function - Added a script to compare state vectors stored during simulations - Added a script to generate a bunch of configs - Added preconditioner to list of quick tests

--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -77,3 +77,6 @@ save_state_freq = 0
 
 # Store statistics about the solver (iterations, residuals, etc.). 0 to disable.
 store_solver_stats = 0
+
+output_dir = results
+solver_stats_file = solver_stats.db
