--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -100,3 +100,5 @@ save_state_freq = 0
 
 # Store statistics about the solver (iterations, residuals, etc.). 0 to disable.
 store_solver_stats = 0
+
+output_dir = results
