--- a/config/dcmip21.ini
+++ b/config/dcmip21.ini
@@ -3,7 +3,6 @@
 
 [General]
 equations = Euler
-depth_approx = shallow
 
 [Grid]
 grid_type = cubed_sphere
@@ -21,17 +20,16 @@ case_number = 21
 [Time_integration]
 
 # Time step
-dt = 25
+dt = 0.2
 
 # End time of the simulation in sec
 # per DCMIP spec, equivalent to 1000 hours in scaled units
 t_end = 7200 
-#t_end = 800
 # t_end = 30
 
 # Time integration scheme
-time_integrator = epi2
-#time_integrator = tvdrk3
+# time_integrator = epi2
+time_integrator = tvdrk3
 
 # Solver tolerance
 tolerance = 1e-7
@@ -39,24 +37,16 @@ tolerance = 1e-7
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 5
+nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
 # 1.5 degree horizontal spacing: 20*3*4 = 120
-nb_elements_horizontal = 12
+nb_elements_horizontal = 20 
 # 60 vertical levels, ≈ 300m spacing
-nb_elements_vertical = 12 
+nb_elements_vertical = 20 
 
 #filter_apply = 1
 #filter_order  = 2
-
-# Parameters for the exponential filter, applied after
-# each timestep (if expfilter_appy=1)
-expfilter_apply = 1
-expfilter_order = 4
-expfilter_cutoff = 0.50
-expfilter_strength = 1e-1
-
 
 [Output_options]
 
@@ -65,7 +55,7 @@ stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
 # DCMIP spec: output every 100 seconds
-output_freq = 1
+output_freq = 500
 
 # Output filename
 base_output_file = dcmip_21
