Revert "Revert "Merge branch 'topo_metric_merge' into 'master'""
This reverts commit c31936ffde718dd06d8c8ddcec044ad884166496.

--- a/config/dcmip21_rk3.ini
+++ b/config/dcmip21_rk3.ini
@@ -21,17 +21,16 @@ case_number = 21
 [Time_integration]
 
 # Time step
-dt = 25
+dt = 0.125
 
 # End time of the simulation in sec
 # per DCMIP spec, equivalent to 1000 hours in scaled units
 t_end = 7200 
-#t_end = 800
 # t_end = 30
 
 # Time integration scheme
-time_integrator = epi2
-#time_integrator = tvdrk3
+#time_integrator = epi2
+time_integrator = tvdrk3
 
 # Solver tolerance
 tolerance = 1e-7
@@ -55,7 +54,7 @@ nb_elements_vertical = 12
 expfilter_apply = 1
 expfilter_order = 4
 expfilter_cutoff = 0.50
-expfilter_strength = 1e-1
+expfilter_strength = 1e-3
 
 
 [Output_options]
@@ -65,7 +64,7 @@ stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
 # DCMIP spec: output every 100 seconds
-output_freq = 1
+output_freq = 800
 
 # Output filename
-base_output_file = dcmip_21
+base_output_file = dcmip_21_rk3
