Various changes: - Set max number of iterations for ROS2 - Adjusted pseudo-time computation for cube-sphere - Adjusted default parameters for dcmip 31 case

--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -1,5 +1,6 @@
 [General]
 equations = Euler
+depth_approx = shallow
 
 [Grid]
 grid_type = cubed_sphere
@@ -13,8 +14,6 @@ ztop = 10000.0
 [Test_case]
 
 case_number = 31
-
-planet_scaling_factor = 125
 
 [Time_integration]
 
