add operator splitting and fixed strang

--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -23,10 +23,10 @@ bubble_rad = 250.
 
 [Time_integration]
 # Time step
-dt = 5
+dt = 0.01
 
 # End time of the simulation in sec
-t_end = 1080
+t_end = 1
 
 # Time integration scheme
 # Possible values  = 'epi2', 'epi3', 'epi4', 'epi5', 'epi6'  = multistep exponential propagation iterative
@@ -41,13 +41,13 @@ t_end = 1080
 #                    'partrosexp2' = Implicit-Exponential hybrid scheme (implicit first)
 #                    'crank_nicolson' = 2nd order implicit scheme
 #                    'bdf2' = 2nd order implicit multistep
-time_integrator = epi2
+time_integrator = tvdrk3
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
 
 # Solver tolerance
-tolerance = 1e-6
+tolerance = 1e-8
 
 jacobian_method = FD
 
@@ -93,7 +93,9 @@ stat_freq = 1
 output_freq = 1
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
-save_state_freq = 0
+save_state_freq = 1
 
 # Store statistics about the solver (iterations, residuals, etc.). 0 to disable.
 store_solver_stats = 0
+
+output_dir = /home/vicky/Documents/ECCC/gef/vicky/testoutput/tvdrk3_dt_0.01_tf_1_tol_1e-8
