Fixed pseudo-dt calculation

--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -42,7 +42,7 @@ precond_tolerance = 1e-1
 num_mg_levels = 3
 num_pre_smoothe = 1
 num_post_smoothe = 1
-pseudo_cfl = 9e4
+pseudo_cfl = 35.0
 restrict_method = modal
 kiops_dt_factor = 1.2
 mg_solve_coarsest = 1
