--- a/config/procs294/galewsky.ini
+++ b/config/procs294/galewsky.ini
@@ -58,5 +58,7 @@ stat_freq = 0
 # Output solution every "output_freq" steps, 0 to disable.
 output_freq = 0
 
+output_dir = results
+
 # Output filename
 base_output_file = out
