--- a/config/gaussian_bubble_testOS.ini
+++ b/config/gaussian_bubble_testOS.ini
@@ -1,3 +1,4 @@
+
 [General]
 equations = euler
 
@@ -23,10 +24,10 @@ bubble_rad = 250.
 
 [Time_integration]
 # Time step
-dt = 5
+dt = 2.0
 
 # End time of the simulation in sec
-t_end = 5
+t_end = 500
 
 # Time integration scheme
 # Possible values  = 'epi2', 'epi3', 'epi4', 'epi5', 'epi6'  = multistep exponential propagation iterative
@@ -47,7 +48,7 @@ time_integrator = sdirk
 krylov_size = 10
 
 # Solver tolerance
-tolerance = 1e-6
+tolerance = 1e-10
 
 jacobian_method = FD
 
@@ -89,16 +90,20 @@ filter_cutoff = 0.5
 
 [Output_options]
 
-# Print blockstats every "stat_freq" steps, 0 to disable.
+# Print blockstats every stat_freq steps, 0 to disable.
 stat_freq = 1
 
-# Plot solution every "output_freq" steps, 0 to disable.
+# Plot solution every output_freq steps, 0 to disable.
 output_freq = 0
 
-# Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
-save_state_freq = 0
+# Save the state vector to a file at every save_state_freq steps. 0 to disable.
+save_state_freq = 2000
 
 # Store statistics about the solver (iterations, residuals, etc.). 0 to disable.
-store_solver_stats = 0
+store_solver_stats = 1
 
-output_dir = results
+# Set graph and state vector Output directory
+output_dir = /home/vicky/Documents/ECCC/gef_pull_april17/gef/vicky/testoutput/sdirk_tol_1e-10_dt_2.0_tf_500
+
+
+        
