--- a/config/gaussian_bubble_cuda.ini
+++ b/config/gaussian_bubble_cuda.ini
@@ -1,6 +1,9 @@
 [General]
 equations = euler
 
+[System]
+device = cuda0
+
 [Grid]
 grid_type = cartesian2d
 
@@ -79,8 +82,8 @@ nbsolpts = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 800
-nb_elements_vertical   = 1200
+nb_elements_horizontal = 400
+nb_elements_vertical   = 600
 
 # Weak filter
 filter_apply = 0
