--- a/config/test_files/epi6/case5.ini
+++ b/config/test_files/epi6/case5.ini
@@ -48,8 +48,9 @@ nbsolpts = 7
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 168
-
+nb_elements_horizontal = 84
+# e = 168 for 8.2 M
+# e = 84 for 2.07 M
 [Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
