--- a/config/test_files/epi6/case6_icwy1s_sm.ini
+++ b/config/test_files/epi6/case6_icwy1s_sm.ini
@@ -3,6 +3,8 @@
 equations = shallow_water
 
 [Grid]
+
+# Possible values: cubed_sphere, cartesian2d
 grid_type = cubed_sphere
 λ0 = 0.0
 #ϕ0 = 0.0
@@ -19,7 +21,7 @@ grid_type = cubed_sphere
 #   5 : zonal flow over an isolated mountain (shallow water)
 #   6 : Rossby-Haurvitz waves (shallow water)
 #   8 : Unstable jet (shallow water)
-case_number = 8
+case_number = 6
 
 [Time_integration]
 
@@ -36,10 +38,29 @@ t_end = 14400
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = epi6
 
-exponential_solver = cwy_1s
+exponential_solver = icwy_1s
 
 # Solver tolerance
 tolerance = 1e-12
+
+gmres_restart = 20
+
+starting_step = 0
+
+[Preconditioning]
+preconditioner = none
+precond_tolerance = 1e-1
+num_mg_levels = 3
+num_pre_smoothe = 1
+num_post_smoothe = 1
+pseudo_cfl = 2.5e7
+restrict_method = modal
+kiops_dt_factor = 1.2
+mg_solve_coarsest = 0
+mg_smoother = erk1
+precond_filter_apply = 0
+verbose_precond = 1
+; exp_smoothe_spectral_radii = [3.0, 1.0, 0.5, 2.2, 1.0]
 
 [Spatial_discretization]
 
@@ -48,7 +69,7 @@ nbsolpts = 7
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 168
+nb_elements_horizontal = 84
 
 [Output_options]
 
@@ -58,5 +79,11 @@ stat_freq = 0
 # Output solution every "output_freq" steps, 0 to disable.
 output_freq = 0
 
-# Output filename
-base_output_file = out
+# Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
+save_state_freq = 0
+
+# Store statistics about the solver (iterations, residuals, etc.). 0 to disable.
+store_solver_stats = 0
+
+# Output directory
+output_dir  = results
