--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -26,7 +26,7 @@ bubble_rad = 250.
 dt = 5
 
 # End time of the simulation in sec
-t_end = 5
+t_end = 1080
 
 # Time integration scheme
 # Possible values  = 'epi2', 'epi3', 'epi4', 'epi5', 'epi6'  = multistep exponential propagation iterative
@@ -41,7 +41,7 @@ t_end = 5
 #                    'partrosexp2' = Implicit-Exponential hybrid scheme (implicit first)
 #                    'crank_nicolson' = 2nd order implicit scheme
 #                    'bdf2' = 2nd order implicit multistep
-time_integrator = sdirk
+time_integrator = epi2
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
@@ -54,7 +54,7 @@ jacobian_method = FD
 # If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
 starting_step = 0
 
-verbose_solver = 1
+verbose_solver = 0
 gmres_restart = 30
 
 [Preconditioning]
@@ -93,7 +93,7 @@ filter_cutoff = 0.5
 stat_freq = 1
 
 # Plot solution every "output_freq" steps, 0 to disable.
-output_freq = 0
+output_freq = 1
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
 save_state_freq = 0
