--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -26,7 +26,7 @@ bubble_rad = 250.
 dt = 5
 
 # End time of the simulation in sec
-t_end = 1080
+t_end = 10
 
 # Time integration scheme
 # Possible values  = 'epi2', 'epi3', 'epi4', 'epi5', 'epi6'  = multistep exponential propagation iterative
@@ -41,7 +41,7 @@ t_end = 1080
 #                    'partrosexp2' = Implicit-Exponential hybrid scheme (implicit first)
 #                    'crank_nicolson' = 2nd order implicit scheme
 #                    'bdf2' = 2nd order implicit multistep
-time_integrator = epi2
+time_integrator = ros2
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
@@ -79,8 +79,8 @@ nbsolpts = 5
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
-nb_elements_horizontal = 19
-nb_elements_vertical   = 30
+nb_elements_horizontal = 5
+nb_elements_vertical   = 8
 
 # Weak filter
 filter_apply = 0
@@ -90,10 +90,10 @@ filter_cutoff = 0.5
 [Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
-stat_freq = 1
+stat_freq = 0
 
 # Plot solution every "output_freq" steps, 0 to disable.
-output_freq = 1
+output_freq = 0
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
 save_state_freq = 0
