Introduce new Exode solver

--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -42,6 +42,8 @@ t_end = 1080
 #                    'crank_nicolson' = 2nd order implicit scheme
 #                    'bdf2' = 2nd order implicit multistep
 time_integrator = epi2
+exponential_solver=exode
+exode_method = ARK3(2)4L[2]SA-ERK
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
