added many more changes - dcmip31 now almost works (sans preconditioner)

--- a/config/dcmip31_cuda.ini
+++ b/config/dcmip31_cuda.ini
@@ -39,8 +39,8 @@ verbose_solver = 1
 gmres_restart = 200
 
 [Preconditioning]
-
-preconditioner = fv-mg
+# fv-mg
+preconditioner = none
 precond_tolerance = 1e-1
 num_mg_levels = 3
 num_pre_smoothe = 1
