various bug fixes - kiops now runs for at least the first few iterations

--- a/config/dcmip31_cuda.ini
+++ b/config/dcmip31_cuda.ini
@@ -39,8 +39,7 @@ verbose_solver = 1
 gmres_restart = 200
 
 [Preconditioning]
-# fv-mg
-preconditioner = none
+preconditioner = fv-mg
 precond_tolerance = 1e-1
 num_mg_levels = 3
 num_pre_smoothe = 1
