Moved filter management to DFROperators

--- a/config/schar.ini
+++ b/config/schar.ini
@@ -68,9 +68,9 @@ filter_order = 8
 filter_cutoff = 0.25
 
 # Sponge
-sponge = 0
-bc_tscale = 5
-bc_zscale = 9500
+apply_sponge = 1
+sponge_tscale = 5
+sponge_zscale = 9500
 
 [Output_options]
 output_freq = 1
