--- a/config/schar.ini
+++ b/config/schar.ini
@@ -59,8 +59,8 @@ nb_elements_horizontal = 80
 nb_elements_vertical = 30
 
 # Layer 10 elements near bottom boundary (below height zl)
-nb_elements_vert_layer = 10
-vert_layer_height = 1000
+nb_elements_bottom_layer = 10
+bottom_layer_height = 1000
 
 # Weak filter
 filter_apply = 0
