Square mountain cleanup, cartesian grid blockstats

--- a/config/density_current.ini
+++ b/config/density_current.ini
@@ -75,6 +75,11 @@ nbsolpts = 5
 nb_elements_horizontal = 50
 nb_elements_vertical   = 10
 
+# Layer 10 elements near bottom boundary (below height zl)
+; nb_elements_relief_layer = 12
+nb_elements_relief_layer = 0
+relief_layer_height = 1500
+
 # Weak filter
 filter_apply = 0
 filter_order = 4
