Updated FV RHS function (on 2D cartesian grid)

--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -63,11 +63,11 @@ precond_tolerance = 1e-1
 num_mg_levels = 5
 num_pre_smoothe = 1
 num_post_smoothe = 1
-pseudo_cfl = 5.0
+pseudo_cfl = 7.0
 restrict_method = modal
 kiops_dt_factor = 1.2
 mg_solve_coarsest = 0
-mg_smoother = exp
+mg_smoother = erk3
 precond_filter_apply = 0
 verbose_precond = 0
 
