Option to choose flux in 2D FV precond RHS - AUSM and Rusanov are working, but not upwind - Simplified blockstats output - Added number of PEs to selection criteria for 2 configs to be the same (for the purpose of restarts) - Updated stats plotting - Improved compressed performance when generating system matrix - When launching a job, use full nodes only

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ doc/*.pdf
 doc/aux/*
 doc/svg-inkscape/*
 
-jacobian/*
+jacobian
 
 scripts/**/*.pdf
 
@@ -16,7 +16,7 @@ __pycache__/
 *.py[cod]
 
 bubble_cliff
-results/
+results
 test_configs/
 work
 scripts/load_env.sh
