--- a/config/gaussian_bubble.ini
+++ b/config/gaussian_bubble.ini
@@ -59,6 +59,7 @@ gmres_restart = 30
 
 [Preconditioning]
 preconditioner = none
+precond_flux = ausm
 precond_tolerance = 1e-1
 num_mg_levels = 5
 num_pre_smoothe = 1
