added stats boolean for case5/6/8

--- a/config/test_files/epi4/galewsky_cwyne.ini
+++ b/config/test_files/epi4/galewsky_cwyne.ini
@@ -36,7 +36,7 @@ t_end = 14400
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = epi4
 
-exponential_solvr = cwy_ne
+exponential_solver = cwy_ne
 
 # Solver tolerance
 tolerance = 1e-12
@@ -53,7 +53,7 @@ nb_elements_horizontal = 168
 [Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
-stat_freq = 0
+stat_freq = 1
 
 # Output solution every "output_freq" steps, 0 to disable.
 output_freq = 0
