--- a/config/test_files/epi4/galewsky_kiops_ne.ini
+++ b/config/test_files/epi4/galewsky_kiops_ne.ini
@@ -48,6 +48,7 @@ nbsolpts = 7
 
 # Number of element in x^1 and x^2 directions
 # Each face of the cube have (nbElements x nbElements) elements, for a total of (6 x nbElements x nbElements) elements.
+#for large problem, test 168
 nb_elements_horizontal = 168
 
 [Output_options]
