- Adjusted options - Less output messages - Added script for checking cupy

--- a/config/dcmip31_cuda.ini
+++ b/config/dcmip31_cuda.ini
@@ -3,7 +3,8 @@ equations = Euler
 depth_approx = shallow
 
 [System]
-device = cuda0,1,2
+device = cuda
+cuda_devices = [0, 1, 2]
 
 [Grid]
 grid_type = cubed_sphere
