dcmip20 without mountain

--- a/config/paper2024/dcmip20_spatial_order.ini
+++ b/config/paper2024/dcmip20_spatial_order.ini
@@ -1,5 +1,6 @@
 [General]
 equations = Euler
+depth_approx = shallow
 
 [Grid]
 grid_type = cubed_sphere
@@ -17,15 +18,17 @@ case_number = 20
 [Time_integration]
 
 # Time step
-dt = 360
+dt = 25
 
 # End time of the simulation in sec
-t_end = 3600
+t_end = 518400
 # 6 days, per DCMIP spec
 #t_end = 518400 
 
 # Time integration scheme
-time_integrator = epi_stiff2
+time_integrator = epi_stiff5
+
+exponential_solver = pmex
 
 # Solver tolerance
 tolerance = 1e-7
@@ -42,7 +45,7 @@ nbsolpts = 3
 # 1 degree horizontal spacing: 32*4*3 = 360 (DCMIP spec)
 nb_elements_horizontal = 30 
 # 15 vertical levels (DCMIP spec, version 1)
-nb_elements_vertical = 5 
+nb_elements_vertical = 10
 # 30 vertical levels (DCMIP spec, version 2)
 #nb_elements_vertical = 10 
 
@@ -56,7 +59,14 @@ stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
 # DCMIP spec: output every 6 hours
-output_freq = 1
+output_freq = 500
+
+# Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
+save_state_freq = 500
 
 # Output filename
 base_output_file = out
+
+# Output and input directory
+output_dir = /home/shp000/raid/ppp5/paper2024/gef/results/dcmip20_test
+
