--- a/config/dcmip21.ini
+++ b/config/dcmip21.ini
@@ -26,15 +26,18 @@ dt = 25
 # End time of the simulation in sec
 # per DCMIP spec, equivalent to 1000 hours in scaled units
 t_end = 7200 
-#t_end = 800
-# t_end = 30
 
 # Time integration scheme
-time_integrator = epi2
-#time_integrator = tvdrk3
+time_integrator = epi_stiff5
+exponential_solver = pmex
 
 # Solver tolerance
 tolerance = 1e-7
+
+# If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
+starting_step = 200
+
+
 
 [Spatial_discretization]
 
@@ -59,13 +62,18 @@ expfilter_strength = 1e-1
 
 
 [Output_options]
-
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
-# DCMIP spec: output every 100 seconds
 output_freq = 1
 
+# Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
+save_state_freq = 50
+
 # Output filename
-base_output_file = dcmip_21
+base_output_file = out_sec_3
+
+# Output and input directory
+output_dir = /home/shp000/raid/ppp5/paper2024/gef/results/test_dcmip21
+
