--- a/config/dcmip20.ini
+++ b/config/dcmip20.ini
@@ -46,6 +46,14 @@ nb_elements_vertical = 2
 #filter_apply = 1
 #filter_order  = 2
 
+# Parameters for the exponential filter, applied after
+# each timestep (if expfilter_appy=1)
+expfilter_apply = 1
+expfilter_order = 4
+expfilter_cutoff = 0.50
+expfilter_strength = 1e-1
+
+
 [Output_options]
 
 # Print blockstats every "stat_freq" steps, 0 to disable.
