--- a/config/paper2024/dcmip21.ini
+++ b/config/paper2024/dcmip21.ini
@@ -21,17 +21,20 @@ case_number = 21
 [Time_integration]
 
 # Time step
-dt = 25
+dt = 0.125
 
 # End time of the simulation in sec
 # per DCMIP spec, equivalent to 1000 hours in scaled units
-t_end = 7200 
+t_end = 10 
 #t_end = 800
 # t_end = 30
 
 # Time integration scheme
-time_integrator = epi2
-#time_integrator = tvdrk3
+time_integrator = tvdrk3
+#exponential_solver = pmex
+
+# If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
+starting_step = 0
 
 # Solver tolerance
 tolerance = 1e-7
@@ -63,9 +66,16 @@ expfilter_strength = 1e-1
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 0
 
+# Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
+save_state_freq = 0
+
 # Output solution every "output_freq" steps, 0 to disable.
 # DCMIP spec: output every 100 seconds
 output_freq = 1
 
 # Output filename
-base_output_file = dcmip_21
+base_output_file = out_2
+
+# Output and input directory
+#output_dir = /home/shp000/raid/ppp6/gef-paper2024/results/dcmip21
+
