--- a/config/paper2024/dcmip20_spatial_order.ini
+++ b/config/paper2024/dcmip20_spatial_order.ini
@@ -18,7 +18,7 @@ case_number = 20
 [Time_integration]
 
 # Time step
-dt = 25
+dt = 1800
 
 # End time of the simulation in sec
 t_end = 518400
@@ -26,31 +26,43 @@ t_end = 518400
 #t_end = 518400 
 
 # Time integration scheme
-time_integrator = epi_stiff5
+time_integrator = epi_stiff4
 
 exponential_solver = pmex
 
 # Solver tolerance
-tolerance = 1e-7
+tolerance = 1e-8
+
+# If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
+starting_step = 156
+
 
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 3
+#nbsolpts = 2
 #nbsolpts = 4
-#nbsolpts = 5
+nbsolpts = 5
 #nbsolpts = 6
 
 # Number of element in x^1, x^2 and x^3 directions
-# 1 degree horizontal spacing: 32*4*3 = 360 (DCMIP spec)
-nb_elements_horizontal = 30 
-# 15 vertical levels (DCMIP spec, version 1)
-nb_elements_vertical = 10
-# 30 vertical levels (DCMIP spec, version 2)
+# 1 degree horizontal spacing: 30*4*3 = 360 (DCMIP spec)
+nb_elements_horizontal = 18 
+# 30 vertical levels (DCMIP spec, version 1)
+nb_elements_vertical = 6
+# 15 vertical levels (DCMIP spec, version 2)
 #nb_elements_vertical = 10 
 
 #filter_apply = 1
 #filter_order  = 2
+
+# Parameters for the exponential filter, applied after
+# each timestep (if expfilter_appy=1)
+expfilter_apply = 1
+expfilter_order = 4
+expfilter_cutoff = 0.50
+expfilter_strength = 1e-1
+
 
 [Output_options]
 
@@ -59,14 +71,14 @@ stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
 # DCMIP spec: output every 6 hours
-output_freq = 500
+output_freq = 12
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
-save_state_freq = 500
+save_state_freq = 156
 
 # Output filename
-base_output_file = out
+base_output_file = out_2
 
 # Output and input directory
-output_dir = /home/shp000/raid/ppp5/paper2024/gef/results/dcmip20_test
+output_dir = /home/shp000/raid/ppp6/gef-paper2024/results/degree_4
 
