epi5: changed ne to hybrid methods

--- a/config/test_files/epi5/case5_icwyne.ini
+++ b/config/test_files/epi5/case5_icwyne.ini
@@ -39,7 +39,7 @@ time_integrator = epi5
 # Solver tolerance
 tolerance = 1e-12
 
-exponential_solver = icwy_ne
+exponential_solver = icwy_ne1s
 
 [Spatial_discretization]
 
