epi6: changed ne to hybrid methods

--- a/config/test_files/epi6/case6_icwyne.ini
+++ b/config/test_files/epi6/case6_icwyne.ini
@@ -38,7 +38,7 @@ t_end = 14400
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = epi6
 
-exponential_solver = icwy_ne
+exponential_solver = icwy_ne1s
 
 # Solver tolerance
 tolerance = 1e-12
