--- a/config/test_files/epi6/galewsky_pmexne.ini
+++ b/config/test_files/epi6/galewsky_pmexne.ini
@@ -36,7 +36,7 @@ t_end = 14400
 #                    epirk4s3A : 4th order 3-stage EPIRK time integration
 time_integrator = epi6
 
-exponential_solver = pmex
+exponential_solver = pmex_ne1s
 
 # Solver tolerance
 tolerance = 1e-12
