srerk6: changed ne to hybrid methods

--- a/config/test_files/srerk6/case6_cwyne.ini
+++ b/config/test_files/srerk6/case6_cwyne.ini
@@ -41,7 +41,7 @@ time_integrator = srerk6
 # Solver tolerance
 tolerance = 1e-12
 
-exponential_solver = cwy_ne
+exponential_solver = cwy_ne1s
 
 gmres_restart = 20
 
