--- a/config/test_files/srerk6/case5_cwyne.ini
+++ b/config/test_files/srerk6/case5_cwyne.ini
@@ -39,7 +39,7 @@ time_integrator = srerk6
 # Solver tolerance
 tolerance = 1e-12
 
-exponential_solver = cwy_ne
+exponential_solver = cwy_ne1s
 
 [Spatial_discretization]
 
