--- a/config/test_files/srerk6/case6_pmexne.ini
+++ b/config/test_files/srerk6/case6_pmexne.ini
@@ -41,7 +41,7 @@ time_integrator = srerk6
 # Solver tolerance
 tolerance = 1e-12
 
-exponential_solver = pmex
+exponential_solver = pmex_ne1s
 
 gmres_restart = 20
 
