Updated Growing mountain

--- a/config/paper2024/dcmip21.ini
+++ b/config/paper2024/dcmip21.ini
@@ -21,17 +21,17 @@ case_number = 21
 [Time_integration]
 
 # Time step
-dt = 0.125
+dt = 0.1
 
 # End time of the simulation in sec
 # per DCMIP spec, equivalent to 1000 hours in scaled units
-t_end = 10 
+t_end = 2500
 #t_end = 800
 # t_end = 30
 
 # Time integration scheme
 time_integrator = tvdrk3
-#exponential_solver = pmex
+; exponential_solver = pmex
 
 # If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
 starting_step = 0
@@ -71,10 +71,10 @@ save_state_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
 # DCMIP spec: output every 100 seconds
-output_freq = 1
+output_freq = 50
 
 # Output filename
-base_output_file = out_2
+base_output_file = out_166
 
 # Output and input directory
 #output_dir = /home/shp000/raid/ppp6/gef-paper2024/results/dcmip21
