--- a/config/paper2024/dcmip31.ini
+++ b/config/paper2024/dcmip31.ini
@@ -18,7 +18,7 @@ case_number = 31
 [Time_integration]
 
 # Time step
-dt = 30
+dt = 0.2
 
 # End time of the simulation in sec
 #t_end = 0
@@ -27,7 +27,8 @@ t_end = 3600
 #t_end = 450000
 
 # Time integration scheme
-time_integrator = epi2
+time_integrator = epi_stiff5
+exponential_solver = pmex
 
 # Solver tolerance
 tolerance = 1e-7
@@ -64,18 +65,17 @@ nb_elements_vertical = 3
 #filter_order  = 2
 
 [Output_options]
-
 # Print blockstats every "stat_freq" steps, 0 to disable.
 stat_freq = 0
 
-# Plot solution every "output_freq" steps, 0 to disable.
-output_freq = 0
+# Output solution every "output_freq" steps, 0 to disable.
+output_freq = 200
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
-save_state_freq = 0
+save_state_freq = 50
 
-# Store statistics about the solver (iterations, residuals, etc.). 0 to disable.
-store_solver_stats = 0
+# Output filename
+base_output_file = dcmip_31
 
-output_dir = results
-solver_stats_file = solver_stats.db
+# Output and input directory
+#output_dir = /home/shp000/raid/ppp5/paper2024/gef/results/test_dcmip31
