--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -18,7 +18,7 @@ case_number = 31
 [Time_integration]
 
 # Time step
-dt = 25
+dt = 0.2
 
 # End time of the simulation in sec
 #t_end = 0
@@ -70,7 +70,7 @@ nb_elements_vertical = 2
 stat_freq = 0
 
 # Output solution every "output_freq" steps, 0 to disable.
-output_freq = 1
+output_freq = 200
 
 # Save the state vector to a file at every "save_state_freq" steps. 0 to disable.
 save_state_freq = 50
@@ -79,5 +79,5 @@ save_state_freq = 50
 base_output_file = dcmip_31
 
 # Output and input directory
-output_dir = /home/shp000/raid/ppp5/paper2024/gef/results/test_dcmip31
+#output_dir = /home/shp000/raid/ppp5/paper2024/gef/results/test_dcmip31
 
