Acoustic Test Update

--- a/config/acoustic.ini
+++ b/config/acoustic.ini
@@ -26,7 +26,7 @@ t_end = 36000
 
 # Time integration scheme
 time_integrator = epi_stiff5
-; exponential_solver = pmex
+exponential_solver = pmex
 
 # Solver tolerance
 tolerance = 1e-7
