[config] Change default DCMIP 3-1 to not use a preconditioner

--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -37,7 +37,7 @@ gmres_restart = 200
 
 [Preconditioning]
 
-preconditioner = fv-mg
+preconditioner = none
 precond_tolerance = 1e-1
 num_mg_levels = 3
 num_pre_smoothe = 1
