[config] Update CUDA configs

--- a/config/dcmip31_cuda_small.ini
+++ b/config/dcmip31_cuda_small.ini
@@ -4,7 +4,7 @@ depth_approx = shallow
 
 [System]
 device = cuda
-cuda_devices = [0, 1, 2, 3, 4, 5]
+#cuda_devices = [0, 1, 2, 3, 4, 5]
 
 [Grid]
 grid_type = cubed_sphere
