--- a/config/dcmip31_cuda_large.ini
+++ b/config/dcmip31_cuda_large.ini
@@ -4,7 +4,7 @@ depth_approx = shallow
 
 [System]
 device = cuda
-cuda_devices = [0, 1, 2, 3, 4, 5]
+#cuda_devices = [0, 1, 2, 3, 4, 5]
 
 [Grid]
 grid_type = cubed_sphere
@@ -22,11 +22,11 @@ case_number = 31
 [Time_integration]
 
 # Time step
-dt = 30
+dt = 20
 
 # End time of the simulation in sec
 #t_end = 0
-t_end = 30
+t_end = 20
 #t_end = 36000
 #t_end = 450000
 
@@ -58,10 +58,10 @@ verbose_precond = 0
 [Spatial_discretization]
 
 # The grid will have (nbsolpts) x (nbsolpts) nodal points in each elements.
-nbsolpts = 4
+nbsolpts = 5
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 24
+nb_elements_horizontal = 30
 nb_elements_vertical = 20
 
 #filter_apply = 1
