--- a/config/dcmip31.ini
+++ b/config/dcmip31.ini
@@ -2,6 +2,9 @@
 equations = Euler
 depth_approx = shallow
 
+[System]
+device = cuda
+
 [Grid]
 grid_type = cubed_sphere
 λ0 = 0.0
@@ -22,7 +25,7 @@ dt = 30
 
 # End time of the simulation in sec
 #t_end = 0
-t_end = 3600
+t_end = 30
 #t_end = 36000
 #t_end = 450000
 
@@ -34,10 +37,11 @@ tolerance = 1e-7
 
 verbose_solver = 1
 gmres_restart = 200
+exponential_solver = kiops
 
 [Preconditioning]
 
-preconditioner = fv-mg
+preconditioner = none
 precond_tolerance = 1e-1
 num_mg_levels = 3
 num_pre_smoothe = 1
@@ -57,7 +61,7 @@ verbose_precond = 0
 nbsolpts = 3
 
 # Number of element in x^1, x^2 and x^3 directions
-nb_elements_horizontal = 24
+nb_elements_horizontal = 12
 nb_elements_vertical = 3
 
 #filter_apply = 1
