Periodic BC in bothe direction for Euler vortex

--- a/config/eulerVortex.ini
+++ b/config/eulerVortex.ini
@@ -37,20 +37,20 @@ t_end = 0.289
 #                    'partrosexp2' = Implicit-Exponential hybrid scheme (implicit first)
 #                    'crank_nicolson' = 2nd order implicit scheme
 #                    'bdf2' = 2nd order implicit multistep
-time_integrator = tvdrk3
+time_integrator = epi2
 
 # Initial size of the Krylov space. Stay constant for phipm, but can be updated dynamically with phipm_iom
 krylov_size = 10
 
 # Solver tolerance
-tolerance = 1e-12
+tolerance = 1e-7
 
-jacobian_method = complex
+; jacobian_method = complex
 
 # If you want to start at an arbitrary timestep (assuming its state vector is already saved in a file)
 starting_step = 0
 
-verbose_solver = 0
+verbose_solver = 1
 gmres_restart = 30
 
 [Preconditioning]
